--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
         <tr><th>종류</th><th colspan="2">사진</th></tr>
     </thead>
     <tbody>
-        <tr><td><ul><li><a href="#한식">한식(韓食) : 한국 음식</a></li></ul></td><td><img src="bibimbap.jpg" width="400"
+        <tr><td><ul><li><a href="#한식">한식(韓食) : 한국 음식</a></li></ul></td><td><img src="./bibimbap.jpg" width="400"
             height="267" alt="bibimbap"></td><td><img src="korea.gif" width="400"
             height="267" alt="korea"></td></tr>
-        <tr><td><ul><li><a href="#중식">중식(中食) : 중국 음식</a></li></ul></td><td><img src="china.jpg" width="400"
+        <tr><td><ul><li><a href="#중식">중식(中食) : 중국 음식</a></li></ul></td><td><img src="./china.jpg" width="400"
             height="267" alt="china"></td><td><img src="china2.jpg" width="400"
                 height="267" alt="china2"></td></tr>
-        <tr><td><ul><li><a href="#일식">일식(日食) : 일본 음식</a></li></ul></td><td><img src="japan.jpg" width="400"
+        <tr><td><ul><li><a href="#일식">일식(日食) : 일본 음식</a></li></ul></td><td><img src="./japan.jpg" width="400"
             height="267" alt="japan"></td><td><img src="japan2.jpg" width="400"
                 height="267" alt="japan2"></td></tr>
-        <tr><td><ul><li><a href="#양식">양식(洋食) : 서양 음식</a></li></ul></td><td><img src="pasta.jpg" width="400"
+        <tr><td><ul><li><a href="#양식">양식(洋食) : 서양 음식</a></li></ul></td><td><img src="./pasta.jpg" width="400"
             height="267" alt="pasta"></td><td><img src="dessert.jfif" width="400"
                 height="267" alt="dessert"></td></tr>
         
@@ -67,7 +67,7 @@
 <hr>
 
 <h3 id="한식"><li><a href="https://namu.wiki/w/%ED%95%9C%EA%B5%AD%20%EC%9A%94%EB%A6%AC" target = "_blank">한식(韓食) : 한국 음식</a></li></h3>
-<img src="bibimbap.jpg" width="400"
+<img src="./bibimbap.jpg" width="400"
          height="267" alt="bibimbap"><br>
 사진은 한식을 대표하는 요리 중 하나인 <b>비빔밥</b><br><br>
 
@@ -80,7 +80,7 @@
 
 
 <h3 id="중식"><li><a href="https://namu.wiki/w/%EC%A4%91%EA%B5%AD%20%EC%9A%94%EB%A6%AC" target = "_blank">중식(中食) : 중국 음식</a></li></h3>
-<img src="china.jpg" width="400"
+<img src="./china.jpg" width="400"
          height="267" alt="china"><br><br>
 좁은 의미로는 <b><span style = "color : red">중국, 대만,</span></b> 넓은 의미로는 
 <b><span style = "color : red">중화권과 화교들로부터 발전한 요리들의 총칭</span></b>이다.
@@ -94,7 +94,7 @@
 
 
 <h3 id="일식"><li><a href="https://namu.wiki/w/%EC%9D%BC%EB%B3%B8%20%EC%9A%94%EB%A6%AC" target = "_blank">일식(日食) : 일본 음식</a></li></h3>
-<img src="japan.jpg" width="400"
+<img src="./japan.jpg" width="400"
          height="267" alt="japan"><br><br>
 <b><span style = "color : red">일식은 일본에서 발달한 요리</span></b>들을 말하며, 
 <b><span style = "color : red">화식(和食)</span></b>이라고도 불린다. 
@@ -107,7 +107,7 @@
 
 
 <h3 id="양식"><li><a href="https://namu.wiki/w/%EC%84%9C%EC%96%91%20%EC%9A%94%EB%A6%AC" target = "_blank">양식(洋食) : 서양 음식</a></li></h3>
-<img src="pasta.jpg" width="400"
+<img src="./pasta.jpg" width="400"
          height="267" alt="pasta"><br><br>
 <b><span style = "color : blue">서양의 정통 요리.</span></b> 
 줄여서 <b><span style = "color : blue">양식</span></b>이라고 한다.
